Prevent changing fontsize on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
   font-size: 16px;
+  text-size-adjust: none;
 }
 
 .wrapper.collapsed{
